--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,9 +5,9 @@ name: Python package
 
 on:
   push:
-    branches: [ main ]
+    branches: [ package ]
   pull_request:
-    branches: [ main ]
+    branches: [ package ]
 
 jobs:
   build:
